fix: display pagination on mobile

--- a/app/static/src/scss/includes/_browse.scss
+++ b/app/static/src/scss/includes/_browse.scss
@@ -310,10 +310,6 @@
     display: block;
   }
 
-  .browse-grid--two-thirds {
-    display: none;
-  }
-
   .govuk-template__body {
     overflow: visible;
   }
